# cocoindex-rust-SDK

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cocoindex/: Cargo.toml
cocoindex/benches/: pipeline.rs
cocoindex/examples/: 01_hello_cocoindex.rs  02_code_walk.rs  03_cached_compute.rs  03_multi_codebase.rs  04_with_llm.rs  README.md
cocoindex/src/: app.rs  cache.rs  ctx.rs  error.rs  fs.rs  lib.rs  macros.rs  stats.rs
cocoindex/src/fs/: walk.rs
cocoindex/tests/: cached_macro.rs  fs_walk.rs  integration_test.rs
cocoindex/tests/equivalence/: vs_python_sdk.rs
cocoindex/tests/integration/: app_basic.rs
cocoindex_macro/: Cargo.toml
cocoindex_macro/src/: key_gen.rs  lib.rs
cocoindex_macro/tests/: trybuild.rs  ui.rs
cocoindex_macro/tests/ui/: cached_missing_ctx.rs  cached_missing_ctx.stderr  cached_pass.rs
