[package]
name = "cocoindex_macro"
version = "0.1.0"
edition = "2021"
authors = ["CocoIndex Team"]
description = "Procedural macros for CocoIndex"
license = "MIT"
documentation = "https://docs.rs/cocoindex_macro"
homepage = "https://github.com/cocoindex-io/cocoindex-rust"
repository = "https://github.com/cocoindex-io/cocoindex-rust"
rust-version = "1.75"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
trybuild = "1"
cocoindex = { path = "../cocoindex" }

[lib]
proc-macro = true
path = "src/lib.rs"
